# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geonode-importer"
version = "1.0.6-alpha1"
description = "A GeoNode 4.1 app that implements a brand new upload/import flow, updated to support django 4.2 and GDAL 3.4.1"
readme = "README.md"
authors = [{ name = "geosolutions-it", email = "info@geosolutionsgroup.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License"
]
keywords = ["gis", "django", "geoserver", "geonode", "importer"]
dependencies = [
    "djangorestframework >= 3.14.0",
    "django >= 4.2.7",
    "gdal >= 3.2.2",
    "pdok-geopackage-validator >= 0.8.0",
    "geonode-django-dynamic-model >= 0.4.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/cesar-benjamin/geonode-importer"

[tool.bumpver]
current_version = "1.0.6-alpha1"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/importer/__init__.py" = ["{version}"]
"setup.py" = ["{version}"]
"setup.py" = ["{version}"]